# tattletale

./: .gitignore  .gitmodules  AGENTS.md  config.nims  pyproject.toml
docs/dev/: Nim-C++_compat.md
skills/: regex.md
workspace/: libtorch.nim  pcre2.nim  probes.nim  safetensors.nim  toktoktok.nim  transformers.nim
workspace/transformers/: pyproject.toml  transformers.nim
workspace/transformers/src/: models.nim
workspace/transformers/src/kernels/: activations.nim
workspace/transformers/src/layers/: all.nim  attn.nim  linear.nim  mlp.nim  norm.nim  rope.nim  rotary_emb.nim  transformer.nim
workspace/transformers/src/models/: all.nim  qwen3.nim
workspace/transformers/tests/: common_utils.nim  gen_layer_fixtures_Qwen3-0.6B.py  test_fixtures_layers.nim  test_layers_fixtures.nim  test_qwen3_config.nim
workspace/transformers/tests/fixtures/configs/: config-GLM-4.7-EXL3-3.84bpw.json  config-GLM-4.7-Flash.json  config-NVIDIA-Nemotron-3-Nano-30B-A3B-FP8.json  config-Qwen3-0.6B-FP8.json  config-Qwen3-0.6B-GPTQ-Int8.json  config-Qwen3-235B-A22B-Instruct-2507.json  config-Qwen3-4B-AWQ.json
workspace/transformers/tests/fixtures/layers/Qwen3-0.6B-layer-8/: attn-Qwen3-0.6B-00.safetensor  attn-Qwen3-0.6B-01.safetensor  mlp-Qwen3-0.6B-00.safetensor  mlp-Qwen3-0.6B-01.safetensor  mlp-Qwen3-0.6B-02.safetensor  mlp-Qwen3-0.6B-03.safetensor  norm-Qwen3-0.6B-00.safetensor  norm-Qwen3-0.6B-01.safetensor  norm-Qwen3-0.6B-02.safetensor  norm-Qwen3-0.6B-03.safetensor
workspace/transformers/tests/testgen/: fixture_generation.md  gen_layer_fixtures_Qwen3-0.6B.py  test_backends.py
(+137 files in other folders)
