[project]
name = "tattletale"
version = "0.1.0"
description = "An AI inference framework"
requires-python = ">=3.12"

# For now Python is mostly used to generate test vectors.
[dependency-groups]
test-vectors = [
    "torch>=2.0.0",
    "safetensors>=0.7.0",
    "transformers>=4.40.0",
    "tokenizers>=0.20.0",
    "tiktoken>=0.12.0",
    "tokendagger>=0.1.0",
    "numpy>=2.4.2",
]

[tool.uv]
package = false
